--- a/.github/workflows/unreleasedcommits-crawl.yml
+++ b/.github/workflows/unreleasedcommits-crawl.yml
@@ -41,7 +41,7 @@ jobs:
           go build -o unreleasedcommits .
 
       # Step 5: Delete the existing data folder in 'self' repository
-      - name: Delete db folder
+      - name: Delete data folder
         run: |
           rm -rf self/data
 
@@ -61,12 +61,12 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      # Step 8: Commit the updated db folder with a timestamped message
+      # Step 8: Commit the updated data folder with a timestamped message
       - name: Commit changes
         run: |
           cd self
-          git add db
-          git commit -m "Updated db on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git add data
+          git commit -m "Updated data on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
 
       # Step 9: Push the changes back to the repository using git push
       - name: Push changes
