--- a/.github/workflows/unreleasedcommits-generate.yml
+++ b/.github/workflows/unreleasedcommits-generate.yml
@@ -2,9 +2,12 @@ name: Deploy Unreleased Commits Generator
 
 # Triggered manually via the "Run workflow" button
 on:
+  # Additional trigger to ensure this is updated after crawl
   schedule:
-    - cron: "10 0 * * *"
-  workflow_dispatch:
+    - cron: 10 0 * * *
+  # Runs on pushes to the default branch
+  push:
+    branches: ["main"]
 
 jobs:
   build:
