--- a/.github/workflows/unreleasedcommits-generate.yml
+++ b/.github/workflows/unreleasedcommits-generate.yml
@@ -49,7 +49,8 @@ jobs:
           cd ./self
           mkdir templates
           cp ../unreleasedcommits/templates/* ./templates/
-          ../unreleasedcommits/unreleasedcommits --generate
+          cp ../unreleasedcommits/unreleasedcommits ./unreleasedcommits
+          ./unreleasedcommits --generate
         # Replace 'YOUR_ORG_NAME' with your actual GitHub organization name
 
       - name: Upload artifact
