--- a/.github/workflows/unreleasedcommits-generate.yml
+++ b/.github/workflows/unreleasedcommits-generate.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          path: ./self/output  # Match the directory where the static files are generated
+          path: ./output  # Match the directory where the static files are generated
 
   # Deployment job
   deploy:
