Enable manual trigger for unreleased commits workflow
Add manual trigger for the workflow.

--- a/.github/workflows/unreleasedcommits-generate.yml
+++ b/.github/workflows/unreleasedcommits-generate.yml
@@ -8,6 +8,8 @@ on:
   # Runs on pushes to the default branch
   push:
     branches: ["main"]
+  # Manual trigger
+  workflow_dispatch:
 
 permissions:
   contents: read  # Required to clone the repository
